--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 	"dependencies": {
 		"express": "^4.18.2",
 		"socket.io": "^4.5.4",
-		"socket.io-client": "^4.5.4"
+		"socket.io-client": "^4.5.4",
+		"sqlite": "^5.1.1",
+		"sqlite3": "^5.1.7"
 	}
 }
