--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
 		"build": "npm run build:kit && npm run build:server",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"test": "vitest",
+		"test:watch": "vitest --watch",
+		"test:coverage": "vitest run --coverage"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.0",
@@ -19,17 +22,19 @@
 		"@sveltejs/kit": "^1.0.0",
 		"@types/express": "^4.17.16",
 		"@types/node": "^18.11.18",
+		"@vitest/coverage-v8": "^1.6.0",
+		"socket.io-client": "^4.8.3",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.4.5",
-		"vite": "^4.0.0"
+		"vite": "^4.0.0",
+		"vitest": "^1.6.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"express": "^4.18.2",
 		"socket.io": "^4.5.4",
-		"socket.io-client": "^4.5.4",
 		"sqlite": "^5.1.1",
 		"sqlite3": "^5.1.7"
 	}
